<resources>
    <string name="app_name">fepo_spring_app</string>
    <string name="connection_string">Connection String</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="editText">Connection String</string>
    <string name="button">Get Customer</string>
    <string name="editText2">ID</string>
    <string name="button2">Set Connection</string>
</resources>
