<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSpringWindow"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/id_label"
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/id_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/content_label"
        android:layout_width="107dp"
        android:layout_height="26dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/content_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_label" />

    <TextView
        android:id="@+id/id_value"
        android:layout_width="41dp"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="12dp"
        android:layout_toEndOf="@+id/id_label"
        android:text="@string/id_value"
        app:layout_constraintBottom_toTopOf="@+id/content_label"
        app:layout_constraintStart_toEndOf="@+id/id_label" />

    <TextView
        android:id="@+id/content_value"
        android:layout_width="81dp"
        android:layout_height="27dp"
        android:layout_alignStart="@+id/id_value"
        android:layout_alignTop="@+id/content_label"
        android:layout_marginStart="16dp"
        android:text="@string/content_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/content_label"
        app:layout_constraintStart_toEndOf="@+id/content_label" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:onClick="onGetCustomer"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText2"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:onClick="onSetConnection"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/connection_string"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>